# aoc2024

./: day.py  day3.py  day4.py  day5.py  main.py
day1/: main.py  pyproject.toml
day2/: main.py
